# advertising_oaid

./: BUILD.gn  README.en.md  README.md  README_zh.md  bundle.json  cfi_blocklist.txt  oaid.gni
etc/init/: BUILD.gn  oaidservice.cfg
interfaces/innerkits/: BUILD.gn  liboaidclient.versionscript
interfaces/innerkits/include/: oaid_anco_service.h  oaid_broker_client.h  oaid_iremote_config_observer.h  oaid_remote_config_observer_stub.h  oaid_service_client.h  oaid_service_interface.h  oaid_service_ipc_interface_code.h  oaid_service_proxy.h
interfaces/innerkits/src/: oaid_anco_service.cpp  oaid_broker_client.cpp  oaid_remote_config_observer_stub.cpp  oaid_service_client.cpp  oaid_service_proxy.cpp
interfaces/kits/js/napi/oaid/: BUILD.gn
interfaces/kits/js/napi/oaid/include/: oaid.h  oaid_init.h
interfaces/kits/js/napi/oaid/src/: oaid.cpp  oaid_init.cpp
patches/: patches.json
profile/: 6101.json  BUILD.gn
services/: BUILD.gn
services/oaid_manager/include/: bundle_mgr_helper.h  connect_ads_stub.h  oaid_death_recipient.h  oaid_observer_manager.h  oaid_rdb_manager.h  oaid_remote_config_observer_proxy.h  oaid_service.h  oaid_service_define.h  oaid_service_stub.h
services/oaid_manager/resource/: oaid_service_config.json
services/oaid_manager/src/: bundle_mgr_helper.cpp  connect_ads_stub.cpp  oaid_death_recipient.cpp  oaid_observer_manager.cpp  oaid_rdb_manager.cpp  oaid_remote_config_observer_proxy.cpp  oaid_service.cpp  oaid_service_stub.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/oaid_fuzzer/: BUILD.gn  oaid_fuzzer.cpp  oaid_fuzzer.h
utils/: BUILD.gn
utils/native/include/: atm_utils.h  ipc_serialization_transporter.h  oaid_common.h  oaid_file_operator.h  oaid_hilog_wreapper.h  template_util.h
utils/native/src/: atm_utils.cpp  ipc_serialization_transporter.cpp  oaid_file_operator.cpp
