# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//domains/advertising/oaid/oaid.gni")

config("oaid_service_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${innerkits_path}/include",
    "../utils/native/include",
    "oaid_manager/include",
  ]
}

ohos_shared_library("oaid_service") {
  branch_protector_ret = "pac_ret"
  configs = [ "${oaid_utils_path}:utils_config" ]

  public_configs = [ ":oaid_service_config" ]

  sanitize = {
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }

  sources = [
    "oaid_manager/src/bundle_mgr_helper.cpp",
    "oaid_manager/src/oaid_death_recipient.cpp",
    "oaid_manager/src/oaid_service.cpp",
    "oaid_manager/src/oaid_service_stub.cpp",
  ]

  deps = [
    "${oaid_utils_path}:oaid_utils",
    "//third_party/openssl:libcrypto_shared",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libprivacy_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "config_policy:configpolicy_util",
    "hilog:libhilog",
    "ipc:ipc_single",
    "kv_store:distributeddata_inner",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  part_name = "oaid"
  subsystem_name = "advertising"
}

ohos_prebuilt_etc("oaid_service_config_json") {
  source = "oaid_manager/resource/oaid_service_config.json"
  relative_install_dir = "cloud/oaid"
  part_name = "oaid"
  subsystem_name = "advertising"
}
