# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//domains/advertising/oaid/oaid.gni")

config("oaid_client_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${oaid_utils_path}/native/include",
  ]
}

ohos_shared_library("oaid_client") {
  sources = [
    "src/oaid_service_client.cpp",
    "src/oaid_service_proxy.cpp",
  ]

  sanitize = {
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }

  configs = [ ":oaid_client_config" ]
  public_configs = [ ":oaid_client_config" ]
  innerapi_tags = [ "platformsdk" ]
  deps = [ "${oaid_utils_path}:oaid_utils" ]
  external_deps = [
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  version_script = "liboaidclient.versionscript"
  subsystem_name = "advertising"
  part_name = "oaid"
}
