# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//domains/advertising/oaid/oaid.gni")

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
module_output_path = "oaid/OAID"

##############################fuzztest##########################################
ohos_fuzztest("OAIDFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file = "${oaid_root_path}/test/fuzztest/oaid_fuzzer"
  include_dirs = []
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "oaid_fuzzer.cpp" ]

  deps = [
    "${innerkits_path}:oaid_client",
    "${oaid_service_path}:oaid_service",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "cJSON:cjson",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_single",
    "kv_store:distributeddata_inner",
    "safwk:system_ability_fwk",
  ]

  defines = [
    "OAID_LOG_TAG = \"OAIDFuzzTest\"",
    "LOG_DOMAIN = 0xD004701",
  ]
}
