# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//domains/advertising/oaid/oaid.gni")

cflags = []

config("native_module_config") {
  visibility = [ ":*" ]

  include_dirs = []

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  defines = [
    "EVENT_LOG_TAG = \"SYSTEMTIMER_STANDARD\"",
    "LOG_DOMAIN = xxxx",
  ]
}

ohos_shared_library("oaid") {
  include_dirs = [
    "${innerkits_path}/include",
    "../utils/native/include",
    "./include",
    "//third_party/node/src",
    "//third_party/libuv/include",
  ]

  sanitize = {
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }
  
  configs = [ ":native_module_config" ]

  sources = [
    "src/oaid.cpp",
    "src/oaid_init.cpp",
  ]

  deps = [
    "${innerkits_path}:oaid_client",
    "${oaid_utils_path}:oaid_utils",
    "//third_party/libuv:uv_static",
  ]

  external_deps = [
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
  ]

  relative_install_dir = "module/identifier"
  subsystem_name = "advertising"
  part_name = "oaid"
}
